src/main/java/com/example/demo/error/BadRequestException.java
package com.example.demo.error;

public class BadRequestException extends RuntimeException {
  public BadRequestException(String message) {
    super(message);
  }
}
